style.scss
:root {
    --Pale-Blue: hsl(243, 100%, 93%);
    --Grayish-Blue: hsl(229, 7%, 55%);
    --Dark-Blue: hsl(228, 56%, 26%);
    --Very-Dark-Blue: hsl(229, 57%, 11%);
}

* {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
}

html {
    font-size: 14px;
    font-family: 'Raleway', sans-serif;
    color: var(--Pale-Blue);
}

body {
    position: relative;
    width: 100vw;
    height: 100vh;
    background-color: var(--Very-Dark-Blue);
}

.bg-image-container {
    position: absolute;
    left: 0;
    right: 0;
    bottom: 0;
    top: 0;
    z-index: -1;
}

.bg-image {
    width: 100%;
    height: 100%;
    object-fit: fill;
}

.main-wrapper {
    width: calc(min(90%, 900px));
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 0 auto;
}

.container {
    flex: 1;
    max-width: 500px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 2rem;
}

.header {
    flex: 1;
    padding: 3rem 3rem;
    border-radius: 10px 40% 10px 10px;
    background-color: var(--Dark-Blue);
    box-shadow: 5px 16px 60px 12px hsla(229, 57%, 11%, 0.479);
    &__buttons {
        width: calc(min(100%, 200px));
        display: flex;
        justify-content: space-between;
        padding-top: 2rem;
        & button {
            min-width: 55px;
            border: none;
            padding: 1rem;
            margin-right: 0.5rem;
            border-radius: 10px;
            background-color: var(--Very-Dark-Blue);
            cursor: pointer;
            &:hover {
                box-shadow: 0px 0px 0px 5px var(--Very-Dark-Blue);
                background-color: var(--Dark-Blue);
            }
        }
    }
}

.storage-view {
    flex: 2;
    position: relative;
    padding: 2rem;
    border-radius: 10px;
    background-color: var(--Dark-Blue);
    box-shadow: 5px 16px 60px 12px hsla(229, 57%, 11%, 0.479);
    &__text {
        text-align: center;
        & span {
            color: #fff;
            font-weight: 700;
        }
    }
    &__label {
        display: flex;
        justify-content: space-between;
        padding-bottom: 2rem;
        color: #fff;
    }
    &__info {
        width: calc(max(20%, 160px));
        position: absolute;
        left: 50%;
        bottom: -25%;
        transform: translateX(-50%);
        padding: 0.8rem 1rem;
        color: var(--Very-Dark-Blue);
        border-radius: 10px;
        background-color: #fff;
        box-shadow: 5px 16px 30px 12px hsla(229, 57%, 11%, 0.205);
        &__triangle {
            display: none;
        }
        & p {
            text-align: center;
            font-size: 3rem;
            font-weight: 700;
        }
        & span {
            color: var(--Grayish-Blue);
            font-size: 0.8rem;
            vertical-align: middle;
        }
    }
}

.load-container {
    position: relative;
    margin: 1rem 0;
}

.load {
    width: 100%;
    height: 20px;
    border-radius: 30px;
    padding: 4px;
    background-color: var(--Very-Dark-Blue);
    overflow: hidden;
    &__bar {
        width: 3%;
        height: 14px;
        position: relative;
        left: 0;
        top: 50%;
        transform: translateY(-50%);
        border-radius: 30px;
        background: linear-gradient(to right, hsl(6, 100%, 80%) 0%, hsl(335, 100%, 65%) 100%);
        z-index: 2;
        transition: width 2s ease;
    }
    &__dot {
        width: 12px;
        height: 12px;
        position: absolute;
        right: 2px;
        top: 50%;
        transform: translateY(-50%);
        border-radius: 50%;
        background-color: #fff;
        z-index: 3;
    }
}

footer {
    position: fixed;
    bottom: 2%;
    left: 50%;
    transform: translateX(-50%);
}

.signature {
    position: relative;
    width: 40px;
    height: 40px;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #1f0902;
    color: #f25a29;
    font-weight: 700;
    border-radius: 50%;
    text-align: center;
    box-shadow: 0 2px 20px -8px #1f0902a8;
    opacity: 0.7;
    transition: background-color 0.4s ease, opacity 0.2s ease, box-shadow 0.4s ease, height 0.4s ease, border-radius 0.4s ease, width 0.4s ease;
    cursor: pointer;
    &:hover {
        box-shadow: 0 10px 40px -8px #1f0902a6;
        opacity: 1;
    }
    &::before {
        content: "Z";
        position: absolute;
        top: 50%;
        left: 50%;
        font-size: 1rem;
        transform: translate(-50%, -50%);
        opacity: 1;
        transition: opacity 0.5s ease-in;
    }
    &__attribution {
        line-height: 1.5;
        color: #1f0902;
        text-decoration: none;
        transform: scale(0);
        opacity: 0;
        transition: all 0.5s ease;
    }
}

.signature-active {
    width: 240px;
    height: 70px;
    border-radius: 0;
    opacity: 1;
    background-color: #f25a29;
    & .signature__attribution {
        transform: scale(1);
        opacity: 1;
    }
    &.signature::before {
        opacity: 0;
    }
}

.onload {
    width: 75%;
}

@media (min-width: 920px) {
    .container {
        width: 100%;
        max-width: inherit;
    }
    .container {
        flex-direction: row;
        align-items: flex-end;
    }
    .bg-image-container {
        top: 50%;
    }
    .storage-view {
        &__label {
            padding-bottom: 0;
        }
        &__text {
            text-align: left;
        }
        &__info {
            left: 75%;
            top: -30%;
            bottom: inherit;
            border-radius: 10px 10px 0 10px;
            &__triangle {
                height: 10px;
                display: block;
                left: 87.5%;
                top: 100%;
                position: absolute;
                border-top : 15px solid #fff;
                border-left : 20px solid transparent;
            }
        }
    }
}

